--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="enter_the_address">Enter the Address</string>
+    <string name="enter_the_address">输入地址以查询天气</string>
 </resources>
